...
                      children: [
                        Padding(
                          padding: const EdgeInsets.all(24.0),
                          child: SizedBox(
                            width: double.infinity,
                            child: TextFormField(
                              key: const ValueKey('LoginEmail_orrf'),
                              controller: _model.loginEmailTextController,
                              focusNode: _model.loginEmailFocusNode,
                              autofocus: false,
                              obscureText: false,
                              decoration: InputDecoration(
                                isDense: true,
...
                        ),
                        Padding(
                          padding: const EdgeInsets.all(24.0),
                          child: SizedBox(
                            width: double.infinity,
                            child: TextFormField(
                              key: const ValueKey('LoginPassword_00at'),
                              controller: _model.loginPasswordTextController,
                              focusNode: _model.loginPasswordFocusNode,
                              autofocus: false,
                              obscureText: !_model.loginPasswordVisibility,
                              decoration: InputDecoration(
                                isDense: true,
...
                          ),
                        ),
                      ],
                    ),
                  ),
                  FFButtonWidget(
                    key: const ValueKey('Button_2wtk'),
                    onPressed: () async {
                      logFirebaseEvent('LOGIN_PAGE_PAGE_LOGIN_BTN_ON_TAP');
                      logFirebaseEvent('Button_auth');
                      GoRouter.of(context).prepareAuthEvent();

                      final user = await authManager.signInWithEmail(
...
                      logFirebaseEvent('LOGIN_PAGE_PAGE_SIgnupLink_ON_TAP');
                      logFirebaseEvent('SIgnupLink_navigate_to');

                      context.pushNamed('SignupPage');
                    },
                    child: Text(
                      key: const ValueKey('SIgnupLink_ol99'),
                      'Don\'t have an account? Sign up here!',
                      style: FlutterFlowTheme.of(context).bodyMedium.override(
                            fontFamily: 'Inter',
                            letterSpacing: 0.0,
                            decoration: TextDecoration.underline,
                          ),
...
