...
                children: [
                  Padding(
                    padding: const EdgeInsets.all(24.0),
                    child: SizedBox(
                      width: double.infinity,
                      child: TextFormField(
                        key: const ValueKey('Signup-Email_qv6h'),
                        controller: _model.signupEmailTextController,
                        focusNode: _model.signupEmailFocusNode,
                        autofocus: false,
                        obscureText: false,
                        decoration: InputDecoration(
                          isDense: true,
...
                  ),
                  Padding(
                    padding: const EdgeInsets.all(24.0),
                    child: SizedBox(
                      width: double.infinity,
                      child: TextFormField(
                        key: const ValueKey('Signup-Password_rt47'),
                        controller: _model.signupPasswordTextController,
                        focusNode: _model.signupPasswordFocusNode,
                        autofocus: false,
                        obscureText: !_model.signupPasswordVisibility,
                        decoration: InputDecoration(
                          isDense: true,
...
                  ),
                  Padding(
                    padding: const EdgeInsets.all(24.0),
                    child: SizedBox(
                      width: double.infinity,
                      child: TextFormField(
                        key: const ValueKey('ConfirmPassword_g05n'),
                        controller: _model.confirmPasswordTextController,
                        focusNode: _model.confirmPasswordFocusNode,
                        autofocus: false,
                        obscureText: !_model.confirmPasswordVisibility,
                        decoration: InputDecoration(
                          isDense: true,
...
                          ),
                        ),
                      ],
                    ),
                  ),
                  FFButtonWidget(
                    key: const ValueKey('LoginButton_o1we'),
                    onPressed: () async {
                      logFirebaseEvent('SIGNUP_PAGE_PAGE_LoginButton_ON_TAP');
                      logFirebaseEvent('LoginButton_auth');
                      GoRouter.of(context).prepareAuthEvent();
                      if (_model.signupPasswordTextController.text !=
                          _model.confirmPasswordTextController.text) {
...
