...
                          ),
                          child: Padding(
                            padding: const EdgeInsets.all(24.0),
                            child: SizedBox(
                              width: 300.0,
                              child: TextFormField(
                                key: const ValueKey('TextField_l297'),
                                controller: _model.textController1,
                                focusNode: _model.textFieldFocusNode1,
                                autofocus: false,
                                obscureText: false,
                                decoration: InputDecoration(
                                  isDense: true,
...
                          ),
                          child: Padding(
                            padding: const EdgeInsets.all(24.0),
                            child: SizedBox(
                              width: 300.0,
                              child: TextFormField(
                                key: const ValueKey('TextField_ob9y'),
                                controller: _model.textController2,
                                focusNode: _model.textFieldFocusNode2,
                                autofocus: false,
                                obscureText: false,
                                decoration: InputDecoration(
                                  isDense: true,
...
              Row(
                mainAxisSize: MainAxisSize.max,
                mainAxisAlignment: MainAxisAlignment.center,
                crossAxisAlignment: CrossAxisAlignment.end,
                children: [
                  FFButtonWidget(
                    key: const ValueKey('CreateAccountButton_5dz4'),
                    onPressed: () async {
                      logFirebaseEvent(
                          'USER_ACCOUNT_SETUP_CreateAccountButton_O');
                      logFirebaseEvent('CreateAccountButton_backend_call');

                      await currentUserReference!.update(createUsersRecordData(
...
